Wed Dec 11 23:40:37 GMT 2013  Olly Betts <olly@survex.com>

	* api/leafpostlist.cc,api/leafpostlist.h,backends/brass/,
	  matcher/localsubmatch.cc,matcher/localsubmatch.h,
	  matcher/queryoptimiser.h: Under brass, optimise the turning of a
	  query into a postlist to copy the cursor blocks for the previous
	  term's postlist.  This is particularly effective for wildcard
	  queries which expand to a lot of terms.

Wed Dec 11 22:05:34 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_postlist.h: We don't have a
	  BrassModifiedPostList class, so we don't need protected members in
	  BrassPostList for it to use.

Wed Dec 11 04:46:58 GMT 2013  Olly Betts <olly@survex.com>

	* weight/bm25weight.cc: Fix case where (k1 == 0 || b == 0) but k2 != 0.
	  Reported by "boomboo" on IRC.
	* tests/api_weight.cc: Add regression test bm25weight5.

Wed Dec 04 05:44:29 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.2.16 and ChangeLog.

Mon Dec 02 02:34:43 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Clarify version of MSVCRT which we require for mingw.

Fri Nov 29 04:21:46 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Fix typo in previous commit.

Fri Nov 29 03:48:24 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Report GCC version.

Wed Nov 27 04:06:32 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from brass:
	* backends/chert/chert_table.cc: Check if the block we want is in the
	  internal cursor for a read-only table too - it isn't needed for
	  correctness in this case, but it is more efficient not to reload a
	  block which we already have.

Sun Nov 24 23:05:37 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Fri Nov 22 20:18:43 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_databasereplicator.cc,
	  backends/brass/brass_databasereplicator.h: compression_stream.h
	  isn't used in brass_databasereplicator.h, so move include to
	  brass_databasereplicator.cc.
